# riosclass_template

cmodel/MyCmodel/: Decode.cpp  Makefile
cmodel/MyCmodel/config/: SingleCycle.yaml
cmodel/MyCmodel/src/: CMakeLists.txt  Makefile  main.cpp  model
cmodel/MyCmodel/src/CPU/: Decode.cpp  Decode.hpp  IF.cpp  IF.hpp  Insn.hpp  Pc_gen.cpp  Pc_gen.hpp
cmodel/MyCmodel/src/HEXParser/: HEXParser.cpp  HEXParser.hpp
cmodel/MyCmodel/src/include/: Macros.h  debug.h
cmodel/MyCmodel/src/libs/: libyaml-cpp.so.0.7.0
cmodel/MyCmodel/src/memory/: Dram.cpp  Dram.hpp
cmodel/MyCmodel/test/: Simulator.cpp  Simulator.hpp  elf2hex.py  test.S  test.c  test.hex
openlane/RUN_2022.10.25_13.18.26/: config.tcl  runtime.yaml
openlane/RUN_2022.10.25_13.45.49/: config.tcl  runtime.yaml
openlane/RUN_2022.12.12_10.39.58/reports/: manufacturability.rpt  metrics.csv
openlane/RUN_2022.12.12_10.39.58/reports/placement/: 7-gpl_sta.max.rpt  7-gpl_sta.min.rpt  7-gpl_sta.rpt  7-gpl_sta.tns.rpt  7-gpl_sta.wns.rpt
openlane/RUN_2022.12.12_10.39.58/reports/routing/: 11-grt_sta.clock_skew.rpt  11-grt_sta.max.rpt  11-grt_sta.min.rpt  11-grt_sta.rpt  11-grt_sta.tns.rpt  11-grt_sta.wns.rpt  9-rt_rsz_sta.area.rpt  9-rt_rsz_sta.clock_skew.rpt  9-rt_rsz_sta.max.rpt  9-rt_rsz_sta.min.rpt  9-rt_rsz_sta.power.rpt  (+5 more)
openlane/RUN_2023.01.20_06.26.02/: config.tcl  config_in.tcl  runtime.yaml
openlane/RUN_2023.01.20_06.26.02/reports/: manufacturability.rpt  metrics.csv
rpt/: lab_1.md  lab_2.md  lab_3.md
verilog/dv/: dpram64.sv  flist.f
verilog/rtl/lab_1/: hello.riscv  wb_arb.sv  wb_interconnect.sv
(+130 files in other folders)
